--- a/spring/src/main/resources/application.properties
+++ b/spring/src/main/resources/application.properties
@@ -1,1 +1,28 @@
+server.port=8080
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+spring.servlet.multipart.max-file-size=100MB
+spring.servlet.multipart.max-request-size=1000MB
+
+spring.datasource.url=jdbc:mysql://120.78.220.185:3306/car?serverTimezone=CTT
+spring.datasource.username=newyear
+spring.datasource.password=newyear123
+mybatis.mapper-locations=mapper/*Mapper.xml
+
+# for initial,min,max
+spring.datasource.initialSize=5
+spring.datasource.minIdle=5
+spring.datasource.maxActive=100
+# sql for validating
+spring.datasource.validationQuery=SELECT 1
+# this will validate idle connection.if validation failed, will remove from pool
+spring.datasource.testWhileIdle=true
+spring.datasource.testOnBorrow=false
+spring.datasource.testOnReturn=false
+# max wait time
+spring.datasource.maxWait=60000
+spring.datasource.timeBetweenEvictionRunsMillis=30000
+spring.datasource.hikari.minimum-idle=3
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.max-lifetime=30000
+spring.datasource.hikari.connection-test-query=SELECT 1
