--- a/spring/src/main/resources/application.properties
+++ b/spring/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.servlet.multipart.max-file-size=100MB
 spring.servlet.multipart.max-request-size=1000MB
 
-spring.datasource.url=jdbc:mysql://120.78.220.185:3306/car?serverTimezone=CTT
+spring.datasource.url=jdbc:mysql://120.78.220.185:3306/newyear?serverTimezone=CTT
 spring.datasource.username=newyear
 spring.datasource.password=newyear123
 mybatis.mapper-locations=mapper/*Mapper.xml
